Transform tool are not updated in time when use 3d cursor orientation #61291

Closed
opened 2019-02-07 18:16:54 +01:00 by Valentin · 3 comments
Member

System Information
OS: Windows 10
GPU: Gtx 1050

Blender Version
blender 2.8, 9c68ac0448, 2019-02-07

Short description of error
Transform tool are not updated in time when use 3d cursor orientation

Exact steps for others to reproduce the error

  • default cube
  • select transform tool
  • select cursor orientation
  • move the 3d cursor, the transform gizmo are not updated unless you use the tool

Video to illustrate the problem:
544mCyRuGG.gif

**System Information** OS: Windows 10 GPU: Gtx 1050 **Blender Version** blender 2.8, 9c68ac0448b6, 2019-02-07 **Short description of error** Transform tool are not updated in time when use 3d cursor orientation **Exact steps for others to reproduce the error** * default cube * select transform tool * select cursor orientation * move the 3d cursor, the transform gizmo are not updated unless you use the tool Video to illustrate the problem: ![544mCyRuGG.gif](https://archive.blender.org/developer/F6540567/544mCyRuGG.gif)
Author
Member

Added subscriber: @Poulpator

Added subscriber: @Poulpator
Campbell Barton was assigned by Sebastian Parborg 2019-02-07 19:00:28 +01:00

This issue was referenced by d86894b9e4

This issue was referenced by d86894b9e43a44ed7f9d937325e74859f254ebf2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61291
No description provided.