Fix T61291: Transform gizmo doesn't update w/ 3D cursor